k8s/skovati.dev/startpage/skovati-startpage-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skovati-startpage-svc
  namespace: skovati-dev
spec:
  ports:
  - name: skovati-startpage-port
    port: 80
  selector:
    app: skovati-startpage
