k8s/skovati.dev/startpage/skovati-startpage-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skovati-startpage-ingress
  namespace: skovati-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - start.skovati.dev
    secretName: skovati-dev-tls
  rules:
    - host: start.skovati.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skovati-startpage-svc
                port:
                  number: 8081
